wp-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-nodeport-service
  namespace: wordpress
spec:
  type: NodePort
  selector:
    app: wordpress-deployment-app
  ports:
  - port: 80 #클러스터 내부 포트 
    protocol: TCP
    targetPort: 80 #클러스터 내부 포트
    nodePort: 30080 #클러스터 외부 포트
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-deployment-app
  namespace: wordpress
spec:
  replicas: 3
  selector:
    matchLabels:
      app: wordpress-deployment-app
  template:
    metadata:
      labels:
        app: wordpress-deployment-app
    spec:
      containers:
      - name: wordpress
        image: wordpress:6.4
        ports:
        - containerPort: 80
        volumeMounts:
        - name: wordpress-nfs
          mountPath: /var/www/html
  volumes:
  - name: wordpress-nfs
    persistentVolumeClaim:
      claimName: pvc-nfs
