wp-statefulset.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-statefulset-service
  namespace: wordpress
  labels:
    app: mysql-statefulset-service
spec:
  selector:
    app: mysql-statefulset-app
  type: ClusterIP  
  ports:
  - port: 3306 #서비스가 수신하는 포트
    targetPort: 3306 #파드 내 컨테이너가 수신하는 포트
    name: db
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
  namespace: wordpress
spec:
  selector:
    matchLabels:
      app: mysql-statefulset-app
  serviceName: "mysql-statefulset-service"
  replicas: 1
  template:
    metadata:
      labels:
        app: mysql-statefulset-app
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: mysql-statefulset-app
        image: mysql:8.0
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: hostpath-vol
        ports:
        - containerPort: 3306
          name: db
        imagePullPolicy: Always
      volumes:
      - name: hostpath-vol
        persistentVolumeClaim:
          claimName: pvc-hostpath
