site-ingress-svc-deployment.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: site-ingress
  namespace: site
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: site01
      port:
        number: 80
  rules:
    - host: site01.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: site01
                port:
                  number: 80
    - host: site02.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: site02
                port:
                  number: 80
    - host: site03.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: site03
                port:
                  number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: site01
  namespace: site
spec:
  type: ClusterIP
  selector:
    app: site01
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: site01
  namespace: site
spec:
  replicas: 1
  selector:
    matchLabels:
      app: site01
  template:
    metadata:
      labels:
        app: site01
    spec:
      containers:
        - name: site01
          image: ausflug/site:01
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  type: ClusterIP
  name: site02
  namespace: site
spec:
  selector:
    app: site02
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: site02
  namespace: site
spec:
  replicas: 1
  selector:
    matchLabels:
      app: site02
  template:
    metadata:
      labels:
        app: site02
    spec:
      containers:
        - name: site02
          image: ausflug/site:02
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: site03
  namespace: site
spec:
  type: ClusterIP
  selector:
    app: site03
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: site03
  namespace: site
spec:
  replicas: 1
  selector:
    matchLabels:
      app: site03
  template:
    metadata:
      labels:
        app: site03
    spec:
      containers:
        - name: site03
          image: ausflug/site:03
          ports:
            - containerPort: 80
